# JEM

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
forth_hashtable/: CMakeLists.txt  forth_const_variables.c  forth_const_variables.h  forth_hashtable.c  forth_hashtable.h  forth_hashtable_tests.cc  forth_hastable_tests.cc  hash_main.c  main.c  user_functions.txt
forth_stack/: CMakeLists.txt  int_stack.c  int_stack.h  int_stack_demo.c  int_stack_tests.cc
lwlog-demo/: CMakeLists.txt  lwlog-demo.c
lwlog-lib/: CMakeLists.txt  lwlog-lib.c  lwlog.h
token/: CMakeLists.txt  token.c  token.h  token_main.c
